[package]
name = "detmaps"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.10.0"

[[bench]]
name = "all"
harness = false

[profile.release]
debug = true
lto = true

# Recommended options: RUSTFLAGS=-Ctarget-cpu=native
