[package]
name = "detmaps"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dev-dependencies]
clap = "4.5.32"
rayon = "1.10.0"
chrono = "0.4.40"
rustix = { version = "1.0.2", features = ["event", "fs", "pipe", "process"] }
itertools = "0.14.0"

[[bench]]
name = "all"
harness = false

[profile.release]
debug = true
lto = true

[dependencies]
crypto-bigint = { version = "0.6.1", default-features = false }
libm = "0.2.11"
rand = { version = "0.9.0", features = ["alloc"], default-features = false}
rand_chacha = "0.9.0"
rand_distr = {version = "0.5.1", default-features = false}

# Recommended options: RUSTFLAGS=-Ctarget-cpu=native
